syntax = "proto3";
package blog.account;

import public "account/data.proto";
import public "common/page.proto";

option go_package = "github.com/asa-taka/practice-grpc-blog/out/go/account";

service AccountService {
  rpc QueryUsers(QueryUsersRequest) returns (QueryUsersResponse) {};
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {};
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {};
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {};
}

message QueryUsersRequest {
  blog.common.PageRequest page = 1;
}

message QueryUsersResponse {
  repeated User Users = 1;
  blog.common.PageResponse page = 2;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  blog.account.User user = 1;
}

message CreateUserRequest {
  blog.account.User user = 1;
}

message CreateUserResponse {
  blog.account.User user = 1;
}

message UpdateUserRequest {
  blog.account.User user = 1;
}

message UpdateUserResponse {
  blog.account.User user = 1;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  blog.account.User user = 1;
}
